<resources>
    <string name="app_name">Poynting RF </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_power">Power Conversions</string>
    <string name="menu_fresnel">Fresnel Zone Clearance</string>
    <string name="menu_vswr">Effective VSWR</string>
    <string name="menu_link">Link Budget</string>
    <string name="menu_coax">Coax Cable Loss</string>
</resources>