<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_coax"
            android:icon="@drawable/cableicon"
            android:title="@string/menu_coax" />
        <item
            android:id="@+id/nav_link"
            android:icon="@drawable/linkicon"
            android:title="@string/menu_link" />
        <item
            android:id="@+id/nav_fresnel"
            android:icon="@drawable/treeicon"
            android:title="@string/menu_fresnel" />
        <item
            android:id="@+id/nav_power"
            android:icon="@drawable/powericon"
            android:title="@string/menu_power" />
        <item
            android:id="@+id/nav_vswr"
            android:icon="@drawable/vswricon"
            android:title="@string/menu_vswr" />
    </group>
</menu>